# QuantumScope

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  workflow.yml
QuantumScope/: LICENSE  README.md  __init__.py  cache.py  config.py  exceptions.py  main.py  setup.py
QuantumScope/utils/: __init__.py
examples/: basic_usage.py
tests/: __init__.py  test_basic.py
