[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "QuantumScope"
version = "1.0.2"
description = "AI-Powered Research Platform - Advanced CLI tool for intelligent research and report generation"
readme = "README.md"
authors = [
    {name = "Parvesh Rawal", email = "team@xenarcai.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["ai", "research", "cli", "artificial-intelligence", "websocket"]
dependencies = [
    "websockets>=10.0",
    "certifi>=2025.4.26"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=3.0.0",
    "pytest-asyncio>=0.18.0",
    "black>=22.0",
    "isort>=5.0.0",
    "flake8>=4.0",
    "mypy>=0.910",
    "pre-commit>=2.15.0",
    "twine>=4.0.0"
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "sphinx-autodoc-typehints>=1.12",
]

[project.scripts]
QuantumScope = "QuantumScope.main:main"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
